docs/api/qiskit/0.37/qiskit.providers.fake_provider.FakeOpenPulse2Q.mdx
---
title: FakeOpenPulse2Q (v0.37)
description: API reference for qiskit.providers.fake_provider.FakeOpenPulse2Q in qiskit v0.37
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.providers.fake_provider.FakeOpenPulse2Q
---

# FakeOpenPulse2Q

<Class id="qiskit.providers.fake_provider.FakeOpenPulse2Q" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.21/qiskit/providers/fake_provider/fake_openpulse_2q.py" signature="FakeOpenPulse2Q" modifiers="class">
  Bases: `qiskit.providers.fake_provider.fake_backend.FakeBackend`

  A fake 2 qubit backend for pulse test.

  FakeBackend initializer.

  **Parameters**

  *   **configuration** ([*BackendConfiguration*](qiskit.providers.models.BackendConfiguration "qiskit.providers.models.BackendConfiguration")) – backend configuration
  *   **time\_alive** (*int*) – time to wait before returning result

  ## Methods

  <span id="qiskit-providers-fake-provider-fakeopenpulse2q-configuration" />

  ### configuration

  <Function id="qiskit.providers.fake_provider.FakeOpenPulse2Q.configuration" signature="FakeOpenPulse2Q.configuration()">
    Return the backend configuration.

    **Returns**

    the configuration for the backend.

    **Return type**

    [BackendConfiguration](qiskit.providers.models.BackendConfiguration "qiskit.providers.models.BackendConfiguration")
  </Function>

  <span id="qiskit-providers-fake-provider-fakeopenpulse2q-defaults" />

  ### defaults

  <Function id="qiskit.providers.fake_provider.FakeOpenPulse2Q.defaults" signature="FakeOpenPulse2Q.defaults()">
    Return the default pulse-related settings provided by the backend (such as gate to Schedule mappings).
  </Function>

  <span id="qiskit-providers-fake-provider-fakeopenpulse2q-name" />

  ### name

  <Function id="qiskit.providers.fake_provider.FakeOpenPulse2Q.name" signature="FakeOpenPulse2Q.name()">
    Return the backend name.

    **Returns**

    the name of the backend.

    **Return type**

    str
  </Function>

  <span id="qiskit-providers-fake-provider-fakeopenpulse2q-properties" />

  ### properties

  <Function id="qiskit.providers.fake_provider.FakeOpenPulse2Q.properties" signature="FakeOpenPulse2Q.properties()">
    Return the measured characteristics of the backend.
  </Function>

  <span id="qiskit-providers-fake-provider-fakeopenpulse2q-provider" />

  ### provider

  <Function id="qiskit.providers.fake_provider.FakeOpenPulse2Q.provider" signature="FakeOpenPulse2Q.provider()">
    Return the backend Provider.

    **Returns**

    the Provider responsible for the backend.

    **Return type**

    [Provider](qiskit.providers.Provider "qiskit.providers.Provider")
  </Function>

  <span id="qiskit-providers-fake-provider-fakeopenpulse2q-run" />

  ### run

  <Function id="qiskit.providers.fake_provider.FakeOpenPulse2Q.run" signature="FakeOpenPulse2Q.run(run_input, **kwargs)">
    Main job in simulator
  </Function>

  <span id="qiskit-providers-fake-provider-fakeopenpulse2q-set-options" />

  ### set\_options

  <Function id="qiskit.providers.fake_provider.FakeOpenPulse2Q.set_options" signature="FakeOpenPulse2Q.set_options(**fields)">
    Set the options fields for the backend

    This method is used to update the options of a backend. If you need to change any of the options prior to running just pass in the kwarg with the new value for the options.

    **Parameters**

    **fields** – The fields to update the options

    **Raises**

    **AttributeError** – If the field passed in is not part of the options
  </Function>

  <span id="qiskit-providers-fake-provider-fakeopenpulse2q-status" />

  ### status

  <Function id="qiskit.providers.fake_provider.FakeOpenPulse2Q.status" signature="FakeOpenPulse2Q.status()">
    Return the backend status.

    **Returns**

    the status of the backend.

    **Return type**

    [BackendStatus](qiskit.providers.models.BackendStatus "qiskit.providers.models.BackendStatus")
  </Function>

  ## Attributes

  ### options

  <Attribute id="qiskit.providers.fake_provider.FakeOpenPulse2Q.options">
    Return the options for the backend

    The options of a backend are the dynamic parameters defining how the backend is used. These are used to control the [`run()`](qiskit.providers.fake_provider.FakeOpenPulse2Q#run "qiskit.providers.fake_provider.FakeOpenPulse2Q.run") method.
  </Attribute>

  ### version

  <Attribute id="qiskit.providers.fake_provider.FakeOpenPulse2Q.version" attributeValue="1" />
</Class>

